--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,5 @@ numpy==1.26.4
 omegaconf==2.3.0
 opencv-python==4.9.0.80
 torch==2.3.0
-ultralytics==8.2.23
+# ultralytics==8.2.23
+ultralytics==8.3.227
